Change pictures and fixed extra space on right for mobile
Spent hours debugging to figure out why their was extra space on the right of the page that made it scroll. It was the footer, I make it max-width of 99vw

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1021,6 +1021,14 @@ html {
   }
 }
 @media only screen and (max-width: 500px) {
+  html {
+    max-width: 100vw;
+    margin: 0;
+    padding: 0;
+  }
+  img {
+    display: block;
+  }
   body {
     background: rgb(4, 4, 8);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(50vh, rgb(13, 121, 9)), color-stop(150vh, rgb(255, 255, 255)));
@@ -1029,7 +1037,6 @@ html {
     padding: 0;
     font-family: "Roboto", sans-serif;
     overflow-x: hidden;
-    max-width: 99vw;
   }
   body .logo-hover {
     position: sticky;
@@ -1045,8 +1052,8 @@ html {
     height: 4em;
     border-radius: 50%;
     border: #e88d71 2px solid;
-    top: 3em;
-    left: 90%;
+    top: 4em;
+    left: 82%;
     -webkit-transition: 0.3s;
     transition: 0.3s;
   }
@@ -1078,7 +1085,7 @@ html {
             justify-content: space-between;
     height: 15vh;
     max-height: 200px;
-    max-width: 900px;
+    max-width: 500px;
     margin: auto;
     margin-top: 0;
   }
@@ -1141,9 +1148,9 @@ html {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    overflow-x: hidden;
   }
   body main .container {
-    max-width: 500px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1154,6 +1161,7 @@ html {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    overflow-y: hidden;
   }
   body main .container .landing-page {
     z-index: 0;
@@ -1196,13 +1204,6 @@ html {
     margin-bottom: -1em;
     z-index: 0;
   }
-  body main .container .landing-page .landing-text img {
-    width: 15rem;
-    width: clamp(15rem, 13.6rem + 7vw, 22rem);
-    -webkit-box-ordinal-group: 4;
-        -ms-flex-order: 3;
-            order: 3;
-  }
   body main .container .landing-page .landing-text h1 {
     margin: 0.5em 0;
     margin-top: 1em;
@@ -1219,7 +1220,6 @@ html {
             transform: scaley(1.2);
   }
   body main .container .landing-page .landing-text .side {
-    margin-left: -6em;
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
@@ -1235,8 +1235,6 @@ html {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-transform: translateX(3em);
-            transform: translateX(3em);
     text-align: center;
   }
   body main .container .landing-page .landing-text .side h2 {
@@ -1280,12 +1278,9 @@ html {
   body main .container .landing-page .links a {
     text-decoration: none;
     color: rgb(0, 0, 0);
-    -webkit-transform: scale(2.5);
-            transform: scale(2.5);
     -webkit-transition: 0.2s;
     transition: 0.2s;
     z-index: 15;
-    padding: 1em;
   }
   body main .container .landing-page .links a:hover {
     color: #e88d71;
@@ -1301,6 +1296,8 @@ html {
     text-shadow: 1px 1px 2px rgba(0, 61, 28, 0.6509803922);
   }
   body main .container .about {
+    max-width: 100%;
+    overflow: hidden;
     margin: 0;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1359,9 +1356,6 @@ html {
   body main .container .about article .abouts .name a {
     text-decoration: none;
     color: black;
-    margin: 0 1em;
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
     -webkit-transition: 0.2s;
     transition: 0.2s;
     font-weight: 500;
@@ -1374,7 +1368,6 @@ html {
   }
   body main .container .about article .abouts .name h2 {
     margin: 0;
-    margin-right: 0.5em;
     font-size: 2.5em;
     -ms-flex-item-align: end;
         align-self: flex-end;
@@ -1386,6 +1379,9 @@ html {
     font-weight: 300;
   }
   body main .container .about article ul {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    justify-self: flex-start;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1402,15 +1398,9 @@ html {
     list-style-type: none;
     font-size: 0.9em;
     margin-top: 1em;
-    margin-right: 0.3em;
   }
   body main .container .about article ul li:nth-child(1) {
     font-weight: 700;
-  }
-  body main .container .about article img {
-    border-radius: 30%;
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
   }
   body main .container .about article .about-aaron {
     -webkit-box-ordinal-group: 2;
@@ -1424,20 +1414,19 @@ html {
             order: 2;
     -webkit-transform: scale(2);
             transform: scale(2);
-    margin-bottom: 3em;
+    margin-bottom: 5em;
   }
   body main .container .about article .l-bio {
-    -webkit-transform: scale(3);
-            transform: scale(3);
-    padding: 5em 0em;
-    margin-bottom: 1em;
+    margin: none;
+    margin-bottom: -1em;
     z-index: -1;
+    width: 100px;
   }
   body main .contact {
     z-index: 3;
     background-color: black;
     color: white;
-    width: 101vw;
+    width: 100vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1451,7 +1440,6 @@ html {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding: 2em 0 3em 0;
     border-bottom: white 1px solid;
   }
   body main .contact .container {
@@ -1468,7 +1456,7 @@ html {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    max-width: 1200px;
+    max-width: 100vw;
   }
   body main .contact .container p {
     padding: 0 1.5em;
@@ -1487,7 +1475,7 @@ html {
     margin-top: 0em;
     margin-bottom: 0;
     border: 2px solid black;
-    width: 100vw;
+    width: 99vw;
   }
   body footer ul {
     padding: 0;
